resolve spacing issues

--- a/public/style.css
+++ b/public/style.css
@@ -38,12 +38,9 @@ a:visited {}
 
 .explanation {
   width: 100%;
-  max-width: 100%;
   text-align: center;
-  font-size: 1rem;
-  /* margin: 20px 10vw 20px 10vw; */
-  margin-top: 20px;
-  margin-bottom: 50px;
+  margin-top: 5px;
+  margin-bottom: 25px;
 
 }
 
@@ -116,6 +113,7 @@ footer {
 #purpleSloth {
    max-height: 256px;
    max-width: 256px;
+   margin-top: -15vh;
 }
 
 @media only screen and (max-width: 600px) {
